helm-charts/infra/crossplane-managed-resources/eks-clusters/01-networking/08-route-table-public.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: matesito--route-public
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: matesito--internet-gw
    region: us-west-1
    routeTableIdRef:
      name: matesito--route-table-public
    tags:
      Name: matesito--route-public
  providerConfigRef:
    name: aws
